[package]
name = "const-replace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "0.97.5", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit", "ecma_transforms", "ecma_codegen"] }
serde_json = "1"
serde = "1"
wasm-bindgen = "0.2.83"